# f1tenth

./: .gitmodules
f1tenth_bringup/config/: ekf_real.yaml  joy.yaml  vesc.yaml
f1tenth_bringup/launch/: hardware_bringup.launch.py  simulation_bringup.launch.py
f1tenth_description/: package.xml  setup.py
f1tenth_description/aruco_marker_models/: aruco_visual_marker_0_marker.material
f1tenth_description/config/: ekf_real.yaml  nav2_localize.yaml  nav2_localize_sim.yaml  slam_toolbox.yaml
f1tenth_description/gazebo/: ackermann.gazebo.xacro  camera.gazebo.xacro  imu.gazebo.xacro  lidar.gazebo.xacro
f1tenth_description/meshes/: aruco.stl
f1tenth_description/rviz/: config.rviz
f1tenth_description/urdf/: const.xacro  joints.xacro  links.xacro  robot.gazebo.xacro  robot.urdf.xacro
