<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chrisgraham908@gmail.com">anyone</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/aruco_marker_models"/>
  </export>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
